@@ -1,5 +1,10 @@
 2005-08-19  John McCutchan  <ttb@tentacle.dhs.org>
 
+	* server/gam_poll_basic.c: (gam_poll_basic_poll_file),
+	(gam_poll_basic_scan_callback): Fix another crasher.
+
+2005-08-19  John McCutchan  <ttb@tentacle.dhs.org>
+
 	* TODO: Clarify a TODO item.
 	* lib/gam_error.c: (gam_error_handle_signal), (gam_error_signal),
 	(gam_error_init), (gam_error_check), (gam_errno), (gam_error),
